apps/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: api-service-account 
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
      - name: api
        image: schniebel/ryanschnabel-api:ba5632dea2558ac7493f6759ddc193e4cea39db3
        ports:
        - containerPort: 8080
