apps/api/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingressroute
  namespace: api
spec:
  routes:
  - kind: Rule
    match: Host(`api.ryanschnabel.io`)
    services:
    - kind: Service
      name: api-service
      port: 8080
